update swagger to register school
